2008-11-08 22:39  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c, tests/php.test, tests/pages/test.php: Fixed nsphp bug
	  with cunked encoding and headers-only responss triggered by PHP
	  ext function

2008-11-08 05:06  Vlad Seryakov <seryakov@users.sf.net>

	* README: simplified php configure process

2008-11-08 05:01  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile, tests/php.test: simplified php configure process

2008-11-08 03:35  Vlad Seryakov <seryakov@users.sf.net>

	* tests/: all.tcl, config.tcl, php.test, modules/testhttp.tcl,
	  pages/test.php: added tests for nsphp

2008-11-08 03:31  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile: added tests for nsphp

2008-10-30 01:13  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c: Fixed bug with PHP exiting but not flushing the headers

2008-10-21 22:46  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c: new function, new module tftp, fixed module nsphp

2008-10-05 18:03  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile: OS X does not have O_LARGEFILE

2008-08-08 00:34  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c: Fixed header handler function, now add/replaces headers
	  correct;y

2008-07-29 17:51  Vlad Seryakov <seryakov@users.sf.net>

	* nsphp.c: Removed dups in PHP function definition array

2008-07-27 20:21  Vlad Seryakov <seryakov@users.sf.net>

	* README, nsphp.c: php module updates, new pdo driver

2008-07-27 20:18  Vlad Seryakov <seryakov@users.sf.net>

	* README: php module updates, new pdo driver

2008-07-27 20:08  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile, README, config.m4, nsphp.c: php module updates, new pdo
	  driver

2008-07-25 23:01  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile, README, config.m4, nsphp.c: New public C API for NSV,
	  improved nsphp module

2008-05-05 18:15  Vlad Seryakov <seryakov@users.sf.net>

	* Makefile, README, nsphp.c: Fixed auth bug, used wrong memory
	  allocation

2008-01-30 16:44  Vlad Seryakov <seryakov@users.sf.net>
